--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <header class="header">
       <div class="header__wrapper-top section">
+        <div class="header__wrapper-mobile_menu"></div>
         <div class="header__wrapper-logo">
           <img src="images/header-logo.png" alt="" />
         </div>
@@ -64,6 +65,18 @@
         <div class="header__wrapper-phone">
           <div class="phone-icon"><img src="images/icon-phone.png" alt="" /></div>
           <p class="phone-number"><a href="tel:87011702598">8(701)170-25-98</a></p>
+        </div>
+        <div class="mobile_menu">
+          <div class="mobile_menu-logo"><img src="images/header-logo.png" alt="" /></div>
+          <div class="mobile_menu-list">
+            <nav class="scroll">
+              <ul class="mobile_menu-ullisti">
+                <li class="mobile_menu-item"><a href="#sanatorium">О САНАТОРИИ</a></li>
+                <li class="mobile_menu-item"><a href="#about">ОТЗЫВЫ</a></li>
+                <li class="mobile_menu-item"><a href="#contact">КОНТАКТЫ</a></li>
+              </ul>
+            </nav>
+          </div>
         </div>
       </div>
       <div class="header__wallpaper">
